# decus-grep-rust

./: .gitignore  Cargo.toml  README.md  grep.c  grep_fixed.c  grep_modern.c
src/: buffer.rs  cursor.rs  errors.rs  grep.rs  lib.rs  main.rs  tests.rs
